Thu Apr  8 12:02:35 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QosProfile/Component/QosProfile_Test_Component.idl:
          In preparation of an upcoming fix.

Thu Apr  8 11:28:53 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsState/Receiver/VTopics_Receiver.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Receiver/VTopics_Receiver_exec.h:
        * connectors/dds4ccm/tests/VariousTopicsState/Receiver/VTopics_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/VariousTopicsState/Sender/VTopics_Sender.idl:
        * connectors/dds4ccm/tests/VariousTopicsState/Sender/VTopics_Sender_exec.h:
        * connectors/dds4ccm/tests/VariousTopicsState/Sender/VTopics_Sender_exec.cpp:
        * connectors/dds4ccm/tests/VariousTopicsState/descriptors/Plan.cdp:
          Solved test issues. In order to receive a subscription matched in the
          Receiver and a publication matched in the Sender, there must be connection
          between a datareader and a datawriter configured in the deployment plan.
          Sender should receive a publication matched since it only uses a
          publisher (and no subscriber).
          Layout changed.

Thu Apr  8 10:15:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/VariousTopicsEvent/Receiver/VTopic_Receiver.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Receiver/VTopic_Receiver_exec.h:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Receiver/VTopic_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Sender/VTopic_Sender.idl:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Sender/VTopic_Sender_exec.h:
        * connectors/dds4ccm/tests/VariousTopicsEvent/Sender/VTopic_Sender_exec.cpp:
        * connectors/dds4ccm/tests/VariousTopicsEvent/descriptors/Plan.cdp:
          Solved test issues. In order to receive a subscription matched in the